<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="toyelliott.projects.ballroomrounds.MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0"
        android:fontFamily="monospace"
        android:text="@string/WelcomeMessage"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible" />
    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="2" >
    </Space>

    <Button
        android:id="@+id/standardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="0"
        android:onClick="startStandard"
        android:text="@string/Standard"
        android:visibility="visible" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"></Space>

    <Button
        android:id="@+id/latinButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="0"
        android:onClick="startLatin"
        android:text="@string/Latin"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/smoothButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="0"
        android:onClick="startSmooth"
        android:text="@string/Smooth"
        android:visibility="visible" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="10"></Space>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="startConfiguration"
        android:text="Start Configuration" />

</LinearLayout>